@@ -1,5 +1,4 @@
-use crate::{def::recive_input, gamestate::def::GameState};
-
+use crate::{def::recive_input, gamestate::def::GameState, item::descriptions::get_room_lore};
 /// Checks which spell you are looking for.
 pub fn check_spell(input: &String) -> bool {
     let fields = [
@@ -38,7 +37,15 @@ fn get_spell_information(input: &String, gamestate: &GameState) -> usize {
             return 2;
         },
         "enhanced insight" => return 3,
-        "see into the past" => return 4,
+        "see into the past" => {
+            println!("Choose spell target:");
+            println!("{}", get_room_lore(gamestate.current_area.room.lore, 0).to_lowercase());
+            for object in &gamestate.current_area.room.interactable_items {
+                println!("{}", object.0);
+            }
+            println!("cancel");
+            return 4;
+        },
         "danger sense" => return 5,
         "wispers of the touch" => return 6,
         "hear the voices" => return 7,
@@ -70,6 +77,19 @@ fn get_spell (input: &String, gamestate: &GameState) -> (usize ,Option<usize>) {
         }
     } else if spell == 3 {
         return (3, Some(1))
+    } else if spell == 4 {
+        let spell_input = recive_input().to_lowercase();
+        if spell_input == "cancel" {
+            return (4, Some(0));
+        }
+        for object in &gamestate.current_area.room.interactable_items {
+            if spell_input == object.0 {
+                return (4, Some(object.1.lore))
+            }
+            if spell_input == get_room_lore(gamestate.current_area.room.lore, 0).to_lowercase() {
+                return (4, Some(gamestate.current_area.room.lore));
+            }
+        }
     }
     return (0, None)
 }
@@ -109,6 +129,21 @@ pub fn print_spell_information(input: &String, gamestate: &GameState) -> String 
         return inspect_person[spell.1.unwrap()].clone();
     } else if spell.0 == 3 {
         return "Spell not used on it's own.".to_string();
+    } else if spell.0 == 4 {
+        // TODO! find a consistent voice for each spell
+        let see_into_the_past = [
+                // 0
+            "You wake up and then walk into the bathroom.".to_string(),
+                // 1
+            "You see yourself walking into the bathroom and then looking into the mirror.".to_string(),
+                // 2
+            "All sorts of people walk through the hallway.".to_string(),
+            "You see yourself looking into the mirror.".to_string(),
+            "You see yourself waking up.".to_string(),
+            "You see people passing by the map.".to_string(),
+            "You see people coming up and looking at the map.".to_string()
+        ];
+        return see_into_the_past[spell.1.unwrap()].clone();
     }
     return "".to_string();
 }
